@@ -1,3 +1,8 @@
+2005-06-01  Mike Kestner  <mkestner@novell.com>
+
+	* glib/Value.cs : handle enum/flags types in Val.
+	[Fixes #75112]
+
 2005-06-01  Dan Winship  <danw@novell.com>
 
 	* glib/Value.cs: Add a constructor and an explicit cast for
